style.css
* {
    padding: 0;
    margin: 0;
  }
  
  p {
    color: rgb(131, 129, 129);
  }

  .container {
    height: 100vh;
    width: 100vw;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(2, 70px) .50fr 2fr 1fr 1fr 2fr;
    gap: 20px;
    background-color: rgb(225, 224, 224);;
  }
  
  aside {
    grid-area: 1 / 1 / 8 / 2;
    display: grid;
    grid-template-columns: 1fr 8fr;
    grid-template-rows: repeat(20, 1fr);
    background-color: rgb(0, 81, 255);
    color: white;
    text-align: center;
    font-weight: bold;
    font-size: 20px;
    align-items: center;
    text-align: start;
  }
  
  .dashboard {
    grid-column: 2 / 3;
    font-size: 30px;
    color: white;
  }
  
  a {
    color: white;
    text-decoration: none;
  }
  
  .home {
    grid-area: 3 / 2 / 4 / 3;
  }
  
  .profile {
    grid-row: 4 / 5;
  }
  
  .messages {
    grid-row: 5 / 6;
  }
  
  .history {
    grid-row: 6 / 7;
  }
  
  .tasks {
    grid-row: 7 / 8;
  }
  
  .communities {
    grid-row: 8 / 9;
  }
  
  .settings {
    grid-row: 11 / 12;
  }
  
  .support {
    grid-row: 12 / 13;
  }
  
  .privacy {
    grid-row: 13 / 14;
  }
  
  .gray-titles-area {
    grid-area: 3 / 2 / 4 / 5;
    background-color: rgb(225, 224, 224);
    font-size: 20px;
    font-weight: 550;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    text-align: center;
    align-items: center;
  }
  
  .announcements {
    grid-column: 4;
  }

  .your-projects,
  .announcements {
    color: black;
  }
  
  main {
    grid-area: 4 / 2 / 8 / 4;
    display: grid;
    grid-template-columns: 1fr 1fr;
    background-color: rgb(225, 224, 224);
    gap: 20px;
  }
  
  .article {
    border-left: 5px solid rgb(247, 182, 19);
    border-radius: 10px;
    padding: 20px;
    background-color: white;
  }
  
  .announcements-section {
    grid-area: 4 / 4 / 6 / 5;
    text-align: left;
    display: grid;
    grid-template-rows: 1fr 1fr 1fr;
    padding: 20px;
    background-color: white;
    border-radius: 10px;
  }

  .trending-section {
    grid-area: 6 / 4 / 8 / 5;
    display: grid;
    grid-template-columns: 1fr 3fr;
    grid-template-rows: repeat(5, 1fr);
    text-align: center;
    align-items: center;
    border-radius: 10px;
    background-color: white;
  }

  img {
    width: 35px;
    height: auto;
    border-radius: 10px;
  }

  .trending-section * a {
    color: rgb(0, 0, 0);
  }

  .trending-title {
    color: #000000;
    font-size: 20px;
    font-weight: 550;
    grid-column: 1 / 2;
    align-items: center;
    text-align: center;
  }

  .img-1 {
    grid-row: 2;
  }

  .img-2 {
    grid-row: 3;
  }

  .img-3 {
    grid-row: 4;
  }

  .img-4 {
    grid-row: 5;
  }

  .link-1 {
    grid-area: 2 / 2 / 3 / 3;
  }

  .link-2 {
    grid-area: 3 / 2 / 4 / 3;
  }

  .link-3 {
    grid-area: 4 / 2 / 5 / 3;
  }

  .link-4 {
    grid-area: 5 / 2 / 6 / 3;
  }

  header {
    grid-area: 1 / 2 / 3 / 5;
    display: grid;
    grid-template-columns: 2fr 1fr;
    background-color: white;
    align-items: center;
  }

  input {
    border: none;
    border-radius: 40px;
    background-color: rgb(225, 224, 224);
    width: 500px;
    height: 30px;
  }

  .header-1 {
    padding: 5px;
    display: flex;
    align-items: center;
    height: 50px;
  }

  .header-2 {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
  }

  .header-3 {
    display: grid;
    grid-template-columns: 1fr 3fr;
    grid-template-rows: 50px 50px;
  }

  .big-penguin {
    grid-area: 1 / 1 / 3 / 2;
  }

  .bigger-penguin {
    width: auto;
    height: 60px;
  }

  .greeting {
    grid-column: 2;
    padding-top: 30px;
  }

  .penguin-name {
    grid-area: 2 / 2 / 3 / 3;
  }

  button {
    color: white;
    background-color: rgb(0, 81, 255);
    border: 1px solid rgb(0, 81, 255);
    border-radius: 40px;
    font-size: 20px;
    padding: 5px 20px 5px 20px;
  }

  button:hover {
    background-color: rgba(49, 129, 214, 0.929);
  }

  .dashboard-icon {

  }

  .home-icon {
    grid-row: 3;
  }

  .profile-icon {
    grid-row: 4;
  }

  .message-icon {
    grid-row: 5;
  }

  .history-icon {
    grid-row: 6;
  }

  .tasks-icon {
    grid-row: 7;
  }

  .communities-icon {
    grid-row: 8;
  }

  .settings-icon {
    grid-row: 11;
  }

  .support-icon {
    grid-row: 12;
  }

  .privacy-icon {
    grid-row: 13;
  }

  aside > img {
    padding-left: 90px;
    margin: 10px;
  }

  .icon-section {
    display: grid;
    
  }

